[package]
name = "sptool"
version = "0.1.0"
authors = ["Daogang Tang <daogangtang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = "2.32"
time = "*"
